2009-06-09  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c: regression fix for recent changes - 
	  ensure that open app -> close app doesn't hide the applets, by
	  making sure that even if we don't have to animate the values,
	  we still make sure that actors are set correctly.

2009-06-09  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#121066 Even when conversation window of a particular contact is open,
		  a separate notification is shown in switcher

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_client_property_changed):
	  Take notice of changes to _HILDON_NOTIFICATION_THREAD
	  and tell tasw about it.
	* src/home/hd-task-navigator.h
	* src/home/hd-task-navigator.c (hd_task_navigator_notification_thread_changed):
	  Handle it.
	  Also changed FLY_EFFECT_DURATION to 250 ms.
	* TODO: reality check

2009-06-08  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/tidy-blur-group.c: Remove dithering code from blur class.
	  With clutter >= 0.8.2-0maemo36, blurring is turned on for everything
	  by default - and GLES/SGX does a better job than the pixel shader.

	* src/home/hd-render-manager.c: Ensure that applets fade out, but 
	  don't fade in. Doing fade as well as fade back from blur meant that
	  applets seemed to just be made visible immediately previously.

	General speed optimisation
	* src/home/hd-home-view.c: Ensure that when a home view isn't visible,
	  the container for the applets on it isn't visible either.
	* src/home/hd-home-view-container.c: Ensure that home views that are
	  not onscreen are clutter_actor_hidden.	  

	Fixes: NB#120492 - Unparented animation actors are displayed.
	
	* src/home/hd-render-manager.c: Added hd_render_manager_should_hide
	which checks MBWMCompMgrClutterClientDontShow. This is then used
	when setting visibility of actors.

2009-06-08  Laszlo Pere  <lpere@blumsoft.eu>
	NB#120612 Unwanted activation of the task launcher/switcher button
