@@ -1,3 +1,11 @@
+2009-06-09  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>
+
+	When an app is marked hibernatable, check if we need to bgkill it
+	immediately.
+	Fixes: NB#121487
+
+	* src/launcher/hd-app-mgr.c:
+
 2009-06-09  Gordon Williams <gordon.williams@collabora.co.uk>
 
 	* src/home/hd-render-manager.c: regression fix for recent changes - 
